2011-05-17  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix use of skeleton_constrained.

	* scribo/estim/components_features.hh,
	* scribo/estim/internal/compute_skeleton.hh: Here.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Add new tests.

	* tests/filter/Makefile.am,
	* tests/util/Makefile.am: Add new targets.

	* tests/filter/objects_on_border.cc,
	* tests/util/component_outline.cc: New.

	* tests/img/comp_on_borders.pbm,
	* tests/img/multi_scale.png,
	* tests/img/single_object.pbm: New test data.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	New routine to extract both thin and thick separators.

	* scribo/primitive/extract/lines_h_thick_and_thin.hh,
	* src/primitive/extract/Makefile.am,
	* src/primitive/extract/lines_h_thick_and_thin.cc,
	* src/primitive/extract/lines_thick_and_thin.cc: New.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	* scribo/primitive/extract/non_text_hdoc.hh: New routine for
	historical documents.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	New object filter.

	* scribo/fun/v2b/objects_on_border_filter.hh,
	* scribo/filter/objects_on_border.hh: New.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Various small fixes in Scribo.

	* scribo/core/document.hh: Store binary image without separators.

	* scribo/filter/object_links_bbox_overlap.hh: Fix use of
	object_links structure.

	* scribo/io/img/internal/debug_img_visitor.hh: Do not draw invalid
	elements.

	* scribo/make/text_components_image.hh: Add a precondition.

	* scribo/primitive/extract/alignments.hh: Add debug guards.

	* scribo/primitive/extract/lines_h_pattern.hh,
	* scribo/primitive/extract/lines_v_pattern.hh: Fix structural
	element used for dilation.

	* scribo/text/merging.hh: Reindent comments.

	* scribo/src/Makefile.am: Add content_in_hdoc target.

2011-05-16  Guillaume Lazzara  <lazzara@fidji.lrde.epita.fr>

	Add holder information to component_info.

	* scribo/core/component_info.hh,